feat: add documentation for Update Opening.
